# DSCI524_Text_Analyzer_19

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.html  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  detect_language_patterns.ipynb  example.ipynb  extract_keywords.ipynb  make.bat  sentiment_analysis_doc.ipynb  topic_modeling.ipynb
src/messageanalyzer/: __init__.py  detect_language_patterns.py  extract_keywords.py  sentiment_analysis.py  topic_modeling.py
src/textanalyzer/: __init__.py  detect_language_patterns.py  extract_keywords.py  sentiment_analysis.py  topic_modeling.py  visualize_language_patterns.py
src/txtanalyzer/: extract_keywords.py
tests/: test_analyze_sentiment.py  test_detect_language_patterns.py  test_extract_keywords.py  test_textanalyzer.py  test_topic_modeling.py  test_visualize_language_patterns.py
