[tool.poetry]
name = "textanalyzer"
version = "0.1.0"
description = "This package includes powerful tools to perform natural language processing on English texts."
authors = ["Quanhua Huang, Adrian Leung, Anna Nandar, Colombe Tolokin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
